--- a/assets/css/less_parts/footer.less
+++ b/assets/css/less_parts/footer.less
@@ -54,6 +54,12 @@
 					color: @white;
 					font-size: 18px;
 
+					img {
+						height:20px;
+						width:20px;
+						border-radius: 50%;
+					}
+
 					&:hover {
 						color: @theme-color;
 					}
