--- a/assets/css/less_parts/menu.less
+++ b/assets/css/less_parts/menu.less
@@ -3,10 +3,12 @@
 ====================================================*/
 .main-header {
 	text-align: center;
-	padding: 150px 0;
+	padding: 100px 0;
 	background: url("https://hackers.nyc3.digitaloceanspaces.com/head.jpg") center center;
 	background-size: cover;
 	position: relative;
+	margin-bottom: 30px;
+	
 	@media(max-width: 800px) {
 		padding: 50px 0;
 	}
@@ -27,7 +29,7 @@
 		}
 
 		img {
-			width: 400px;
+			width: 300px;
 			max-width: 80%;
 			@media(max-width: 800px) {
 				width: 250px;
