--- a/assets/css/screen.less
+++ b/assets/css/screen.less
@@ -11,121 +11,31 @@
 @import "less_parts/post.less";
 @import "less_parts/postpreview.less";
 @import "less_parts/variables.less";
+
+
+@import "less_parts/customtemplates.less";
+@import "less_parts/hacks.less";
+@import "less_parts/linkpreview.less";
+@import "less_parts/widgets.less";
+@import "less_parts/pagination.less";
+@import "less_parts/page.less";
+
+
 /*====================================================
 	fonts
 ====================================================*/
 @font-face {
 	font-family: 'akzidenz';
-	src: url("https://storage.cloud.google.com/hackersandslackersassets/AkzidenzGrotesk-BQ-Light-Regular.otf") format("opentype");
+	src: url("https://hackers.nyc3.digitaloceanspaces.com/AkzidenzGrotesk-BQ-Light-Regular.otf") format("opentype");
 }
 
 
 
 
-/*====================================================
-	main post area
-====================================================*/
-.container {
-	margin: 20px auto 0;
-	@media(max-width: 800px) {
-		margin: 0;
-		padding: 0;
-		width: 100% !important;
-
-		.postlist {
-			margin: 20px;
-		}
-	}
-}
 
 
 
-.share {
-	.share-icons {
-		padding: 0;
-		margin: 0;
-		display: flex;
-		justify-content: space-between;
 
-		li {
-			list-style: none;
-			display: inline-block;
-			border: 1px solid @border-color;
-			padding: 4px 9px 2px;
-			transition: 0.2s all ease-out;
-			border-radius: 2px;
-			margin-left: 10px;
-
-			&:hover {
-				color: @white;
-				background: @theme-color;
-				border: 1px solid @theme-color;
-
-				a {
-					color: @white;
-				}
-			}
-
-			a {
-				color: #c4c4c4;
-				text-align: center;
-				font-size: 18px;
-			}
-		}
-	}
-}
-
-.post-page {
-	.post-head {
-		border-bottom: 1px solid #eaeaea;
-		margin: 0 40px;
-		padding: 30px 0;
-	}
-
-	.post-content {
-		margin: 20px 40px 0;
-	}
-	@media(max-width: 800px) {
-		.featured-media {
-			width: 110%;
-			margin-left: -5%;
-			margin-top: -7%;
-		}
-	}
-}
-/*====================================================
-	pagination
-====================================================*/
-.pagination {
-	margin: 0 0 35px;
-	text-align: center;
-	display: block;
-	order: 20;
-
-	a {
-		text-align: center;
-		display: inline-block;
-		color: #FFFFFF;
-		background: @theme-color;
-		border-radius: 0;
-		padding: 6px 13px;
-
-		&:hover {
-			background: @hover-color;
-			text-decoration: none;
-			color: @white;
-		}
-	}
-
-	.page-number {
-		background: @theme-color;
-		color: @white;
-		margin: 0 5px;
-		display: inline-block;
-		line-height: 1;
-		padding: 12px 14px;
-	}
-}
 /*====================================================
 	about author and comment and next-prev link
 ====================================================*/
@@ -183,7 +93,7 @@
 
 .about-author {
 	background: @white;
-	padding: 20px;
+	padding: 40px;
 	margin: 10px 0;
 
 	.avatar {
@@ -254,253 +164,11 @@
 		margin: 20px 0 0;
 	}
 }
-/*====================================================
-	sidebar
-====================================================*/
-.sidebar {
-	.widget {
-		background: @white;
-		padding: 20px 25px;
-
-		.social {
-				padding:0;
-				display: flex;
-				justify-content: space-between;
-		}
-
-		.newsletter {
-			button {
-				border: 1px solid #26a2c7;
-		    background: #26a2c7;
-		    color: #FFFFFF;
-				width: 100%;
-			}
-		}
-
-	}
 
 
 
-	.recent-single-post {
-		.post-title {
-			color: #427382;
-			line-height: 1;
-			font-size: 15px;
-
-			&:hover {
-				color: @hover-color;
-			}
-		}
-	}
-
-	.upcoming {
-		p {
-			margin-bottom: 0;
-		}
-
-		ul {
-			padding: 10px 0 0;
-		}
-	}
-
-	.text {
-		font-size: 16px;
-
-		p {
-			margin: 0;
-		}
-	}
-
-	.post-title {
-		a {
-			color: #627e90;
-			font-family: 'akzidenz', 'proxima-nova', serif;
-			transition: all 0.2s ease;
-			font-size: 15px !important;
-			font-weight: 500 !important;
-
-			&:hover {
-				cursor: pointer;
-				color: @hover-color;
-			}
-		}
-	}
-}
-
-.main-footer {
-	.widget {
-		padding: 0 30px;
-
-		.post-title,
-		.single-author-name {
-			color: @white;
-		}
-
-		.avi {
-			width: 30px;
-			height: 30px;
-			display: inline-block;
-			margin-right: 10px;
-			border-radius: 50%;
-		}
-		@media(max-width: 800px) {
-			margin-bottom: 50px;
-
-			h4 {
-				font-size: 2.5em;
-			}
-
-			.recent-single-post,
-			.single-author {
-				width: 80%;
-			}
-		}
-	}
-}
-
-.widget {
-	margin-bottom: 20px;
-	margin-top: 0;
-
-	.title {
-		margin-top: 0;
-		padding-bottom: 7px;
-		border-bottom: 1px solid @theme-color;
-		margin-bottom: 21px;
-		position: relative;
-
-		&:after {
-			content: "";
-			width: 90px;
-			height: 1px;
-			background: @theme-color;
-			position: absolute;
-			left: 0;
-			bottom: -1px;
-		}
-	}
-
-	.google-plus {
-		overflow: hidden;
-	}
 
 
-
-		li {
-			display: inline-block;
-			text-align: center;
-			border: 1px solid @border-color;
-			padding: 5px 7px;
-
-			a {
-				i {
-					line-height: 1;
-					color: #bbbbbb;
-					.transition(all 0.2s);
-					height: 15px;
-					width: 21px;
-					font-size: 13px;
-					transition: all 0.2s ease-out;
-				}
-			}
-
-			&:hover {
-				background: @theme-color;
-				border: 1px solid @theme-color;
-				cursor: pointer;
-
-				i {
-					color: @white;
-				}
-			}
-		}
-
-
-	.tag-cloud {
-		a {
-			border: 1px solid #e6e6e6;
-			padding: 3px 11px;
-			color: #627e90;
-			line-height: 1.5em;
-			display: inline-block;
-			margin: 0 10px 10px 0;
-			border-radius: 2px;
-			.transition(all 0.2s ease);
-
-			&:hover {
-				color: @white;
-				background: @theme-color;
-				border: 1px solid @theme-color;
-				text-decoration: none;
-			}
-		}
-	}
-
-
-	.recent-post {
-		.recent-single-post,
-		.single-author {
-			border-bottom: 1px dashed @border-color;
-			padding-bottom: 14px;
-			margin-bottom: 14px;
-
-			.post-title,
-			.single-author-name {
-				font-family: 'akzidenz', 'proxima-nova', serif;
-				.transition(all 0.2s ease);
-				font-weight: 100;
-
-				&:hover {
-					color: @theme-color;
-					text-decoration: none;
-				}
-			}
-
-			.date {
-				color: @text-color-light;
-				font-size: 12px;
-				opacity: 0.8;
-
-				i {
-					margin-right: 5px;
-				}
-			}
-
-			&:last-child {
-				margin-bottom: 0;
-				border-bottom: 0;
-				padding-bottom: 0;
-			}
-		}
-	}
-
-	.newsletter {
-		width:100%;
-		.form-group,
-		.subscribe-email {
-			width:100%;
-		}
-
-		.input-group,
-		.form-group  {
-			margin-bottom: 20px;
-			display: block;
-
-			.email {
-				width: 100%;
-			}
-
-			.btn {
-				width: 100%;
-			}
-		}
-
-		p {
-			margin-bottom: 10px;
-			font-size: 16px;
-		}
-	}
-}
 
 
 /*====================================================
@@ -734,6 +402,7 @@ p {
 		text-align: left;
 		padding: 0 15px;
 
+
 		.menu {
 			li {
 				display: block;
@@ -783,48 +452,18 @@ p {
 	iframe {
 		margin: 0 auto !important;
 	}
-}
 
-.page-template,
-.post-template {
-	.post-meta {
-		margin: 10px 40px 0;
-		color: #9ea1ab;
-		font-size: 14px;
-
-		& > div {
-			margin-right: 20px;
-			display: inline-block;
-		}
-
-		a {
-			color: #9ea1ab;
-		}
-
-
-
-
-
-		i {
-			margin-right: 5px;
-		}
-		@media(max-width: 800px) {
-			margin: 10px 40px 0;
-			display: flex;
-			justify-content: space-between;
-		}
-	}
 
 	.mobile-branding {
 		float: left;
-		margin: auto 0;
+		margin: 9px 5px;
 		height: 40px;
 		width: 40px;
-		position: absolute;
+		position: relative;
 		top: 0;
 		bottom: 0;
 		left: 10px;
-		z-index: 11;
+		z-index: 40;
 
 		img {
 			width: inherit;
@@ -846,821 +485,5 @@ p {
 		margin: 3px;
 	}
 
-	.link-preview {
-		border: 1px solid #d2d2d2;
-		padding: 10px;
-		transition: all 0.2s ease-out;
-		border-radius: 3px;
-		margin: 20px auto;
-		background-color: #ffffff;
-		display: flex;
-		justify-content: space-between;
-		@media(max-width: 800px) {
-			width: 100%;
-		}
 
-		.preview-image {
-			display: inline-block;
-			width: 40%;
-			min-width: 200px;
-			background-size: cover;
-			background-position-x: center;
-			background-position-y: center;
-			border-radius: 2px;
-			border: 1px solid #ddd;
-			@media(max-width: 600px) {
-				width:60%;
-			}
-		}
-
-		i {
-			margin-right: 10px;
-			display: inline-block;
-			font-size: 12px;
-			margin-right: 10px;
-			color: grey;
-		}
-
-		.url-info {
-			color: @theme-color;
-			margin-top: 0;
-			font-size: 13px;
-			display: inline-block;
-			margin: 0 !important;
-			white-space: nowrap;
-			overflow: hidden;
-			text-overflow: ellipsis;
-			width: 100%;
-			line-height: 1;
-		}
-
-		.link-info {
-			display: inline-block;
-			overflow: hidden;
-			padding: 10px 20px;
-
-			h4 {
-				margin-top: 0;
-				margin-top: 0;
-				font-size: 1.5em;
-				font-weight: 500;
-
-				@media(max-width: 800px) {
-					font-size: 1.3em;
-				}
-			}
-
-			p {
-				color: @text-color;
-				font-weight: 100;
-				line-height: 1.3;
-				margin-bottom: 10px;
-				font-size: 14px;
-				text-overflow: ellipsis;
-				display: -webkit-box;
-				-webkit-line-clamp: 5;
-				-webkit-box-orient: vertical;
-				overflow: hidden;
-				@media(max-width: 600px) {
-					display: none;
-				}
-			}
-		}
-
-
-
-		&:hover {
-			background-color: @theme-color;
-			color: #fff;
-			cursor: pointer;
-			text-decoration: none;
-			border: 1px solid @theme-color;
-
-			a,
-			h4,
-			p,
-			span {
-				color: #fff;
-			}
-		}
-	}
-}
-
-.author-template .post,
-.home-template .post,
-.paged .post,
-.tag-template .post {
-	.kg-card-markdown * {
-		display: none;
-	}
-
-	.twitter-tweet {
-		display: none !important;
-	}
-
-	.kg-card-markdown {
-		a,
-		iframe,
-		strong {
-			display: inline !important;
-		}
-
-		li,
-		ol {
-			margin:20px;
-		}
-
-
-		p:nth-of-type(1) {
-			display: block;
-			margin: 0;
-		}
-
-		a {
-			white-space: nowrap;
-			overflow: hidden;
-			text-overflow: ellipsis;
-			line-height: 1.5;
-		}
-	}
-
-	&.tag-video {
-		padding: 0;
-
-		.post-head {
-			display: none;
-		}
-
-		.fluid-width-video-wrapper {
-			display: block !important;
-		}
-
-		.post-permalink {
-			display: none;
-		}
-
-		.post-content {
-			margin: 0;
-		}
-	}
-}
-
-.page-about {
-	.col-md-6 {
-		padding: 0;
-	}
-
-	.col-md-6:nth-of-type(1) {
-		padding: 0 30px 0 0;
-		@media(max-width: 600px) {
-			padding: 0;
-		}
-	}
-}
-
-.active {
-	display: block !important;
-}
-
-.col-sm-12 {
-	@media(max-width: 1040px) {
-		padding-right: 0;
-		padding-left: 0;
-
-		.menu {
-			display: flex;
-			justify-content: space-between;
-			margin: auto;
-		}
-
-		.navbar-collapse {
-			padding-right: 0;
-			padding-left: 0;
-			display: block;
-			max-width: 375px;
-			margin: 0 auto;
-
-			li {
-				display: inline-block;
-				padding: 20px 0;
-
-				a {
-					line-height: 1;
-					font-size: 16px;
-				}
-			}
-		}
-
-		.navbar-header {
-			display: none;
-		}
-	}
-}
-
-.col-lg-1,
-.col-lg-10,
-.col-lg-11,
-.col-lg-12,
-.col-lg-2,
-.col-lg-3,
-.col-lg-4,
-.col-lg-5,
-.col-lg-6,
-.col-lg-7,
-.col-lg-8,
-.col-lg-9,
-.col-md-1,
-.col-md-10,
-.col-md-11,
-.col-md-12,
-.col-md-2,
-.col-md-3,
-.col-md-4,
-.col-md-5,
-.col-md-6,
-.col-md-7,
-.col-md-8,
-.col-md-9,
-.col-sm-1,
-.col-sm-10,
-.col-sm-11,
-.col-sm-12,
-.col-sm-2,
-.col-sm-3,
-.col-sm-4,
-.col-sm-5,
-.col-sm-6,
-.col-sm-7,
-.col-sm-8,
-.col-sm-9,
-.col-xs-1,
-.col-xs-10,
-.col-xs-11,
-.col-xs-12,
-.col-xs-2,
-.col-xs-3,
-.col-xs-4,
-.col-xs-5,
-.col-xs-6,
-.col-xs-7,
-.col-xs-8,
-.col-xs-9 {
-	padding-right: 10px;
-	padding-left: 10px;
-}
-@media (min-width: 992px) {
-	.col-md-push-4 {
-		left: 0;
-	}
-}
-@media (min-width: 992px) {
-	.col-md-pull-8 {
-		right: 0;
-	}
-}
-@media (min-width: 992px) {
-	.main-content {
-		width: 71%;
-	}
-
-	.sidebar {
-		width: 28%;
-	}
-}
-/*====================================================
-	Bootstrap override
-====================================================*/
-@media(max-width: 800px) {
-	.post-preview {
-		padding: 10px;
-
-		&.tag-video {
-			.post-content {
-				margin: 0;
-			}
-		}
-	}
-
-	.main-header {
-		@media(max-width: 800px) {
-			padding: 60px 0;
-		}
-	}
-
-	.main-header {
-		border: 0;
-
-		a {
-			color: white;
-		}
-	}
-
-	.row {
-		margin-right: 0;
-		margin-left: 0;
-	}
-
-	.main-navigation {
-		padding: 0 6%;
-		margin: 0;
-		border: 0;
-		position: relative;
-
-		.container {
-			padding-right: 0;
-			padding-left: 0;
-
-			.row {
-				margin: 0;
-
-				.col-sm-12 {
-					padding: 0;
-
-					.navbar-collapse {
-						.menu {
-							padding: 0;
-
-							li {
-								a {
-									font-weight: 100;
-								}
-							}
-						}
-					}
-				}
-			}
-		}
-	}
-
-	.container {
-		.postlist {
-			display: flex;
-			justify-content: space-between;
-			flex-direction: column;
-			height: calc(100% + 100px);
-		}
-
-		.main-content {
-			padding-right: 0;
-			padding-left: 0;
-
-			.page-template,
-			.post-page {
-				padding: 20px 0 0;
-				margin-bottom: 0;
-
-				.post-head {
-					padding: 30px 0;
-					margin: 0 40px;
-
-					.post-title {
-						font-weight: 700;
-						text-align: center;
-					}
-
-					h5 {
-						text-align: center;
-					}
-
-					.author,
-					.date {
-						margin: 10px auto 0;
-						display: block;
-					}
-				}
-
-				.post-meta {
-					text-align: center;
-				}
-
-				.kg-card-markdown {
-					margin: 0 !important;
-					overflow-x: hidden;
-					padding: 20px 0;
-
-					ul,
-					ol {
-						margin:0;
-						padding: 0 30px !important;
-
-
-					}
-				}
-			}
-
-			.about-author {
-				background: #f0f1f4;
-				padding: 20px;
-				margin-bottom: 0;
-			}
-
-			.prev-next-wrap {
-				margin: 0;
-				text-align: center;
-				padding: 0 20px 24px;
-				background: #f0f1f4;
-			}
-		}
-	}
-
-	.main-footer {
-		margin: 0;
-
-		.container {
-			margin: 0;
-			padding: 0;
-		}
-	}
-
-	.pagination {
-		margin: 20px 0;
-	}
-}
-
-.page-template,
-.post-template {
-	.main-header {
-		margin-bottom: 0;
-		padding: 70px 0;
-
-		.branding img {
-			width: 300px;
-		}
-
-		.menu {
-			margin: 30px 30px 0 auto;
-			max-width: 250px;
-
-			a {
-				font-size: 16px;
-			}
-		}
-	}
-	@media(max-width: 800px) {
-		.main-header {
-			padding: 1px;
-			background: none;
-			position: absolute;
-			top: 0;
-			z-index: 10;
-			width: 100%;
-			background: linear-gradient(0deg, rgba(2,0,36,0) 0%, rgb(7, 38, 61) 95%);
-
-			.branding {
-				display: none;
-			}
-
-			.menu {
-				margin: 20px 0 20px auto;
-				max-width: 250px;
-			}
-		}
-	}
-}
-@media(max-width: 800px) {
-	.fluid-width-video-wrapper {
-		height: 350px;
-	}
-}
-@media(max-width:500px) {
-	.fluid-width-video-wrapper {
-		height: 236px;
-	}
-}
-
-.repos {
-	display: flex;
-	justify-content: space-between;
-	flex-direction: row;
-	flex-wrap: wrap;
-	height: 500px;
-	position: relative;
-	overflow: hidden;
-
-	.loader {
-		width: 60%;
-		border: 0 !important;
-		margin: auto;
-		display: block;
-		position: absolute;
-		z-index: 40;
-		right: 0;
-		left: 0;
-		top: 30px;
-	}
-
-	a {
-		width: 49%;
-		z-index: 1;
-		height: fit-content;
-
-		&:hover {
-			.repo {
-				background-color: @theme-color;
-				color: white;
-				cursor: pointer;
-				text-decoration: none;
-
-				h3,
-				p {
-					color: white !important;
-					text-decoration: none;
-				}
-			}
-		}
-		@media(max-width: 600px) {
-			width: 100%;
-		}
-	}
-
-	.repo {
-		border: 1px solid #eaeaea;
-		padding: 15px;
-		margin: 5px 0;
-		transition: all 0.3s ease-out;
-		position: relative;
-		overflow: hidden;
-		opacity: 0;
-
-		img {
-			border: 0;
-		}
-
-		.lang {
-			height: 80px;
-			width: 80px;
-			display: inline-block;
-			position: relative;
-			margin-right: 16px;
-			float: left;
-			display: none;
-
-			span {
-				margin: auto;
-				display: block;
-				position: absolute;
-				top: 0;
-				bottom: 0;
-				left: 0;
-				right: 0;
-				width: fit-content;
-				height: fit-content;
-				color: black;
-			}
-		}
-
-		.details {
-			display: inline-block;
-			position: relative;
-			width: 99%;
-
-			h3 {
-				margin: 0;
-				font-size: 1.2em;
-				white-space: nowrap;
-				overflow: hidden;
-				text-overflow: ellipsis;
-				width: 97%;
-			}
-
-			.description {
-				color: @text-color;
-				margin: 10px 0;
-				font-size: 13px;
-				line-height: 1.3;
-				overflow: hidden;
-			}
-
-			.author {
-				margin: 0;
-			}
-
-			img {
-				height: 20px;
-				width: 20px;
-				border-radius: 2px;
-				display: inline-block;
-				margin-right: 5px;
-			}
-
-			i {
-				font-size: 17px;
-			}
-
-			.author {
-				font-size: 11px;
-				margin: 0;
-			}
-		}
-
-		.Python {
-			background-color: blue;
-		}
-
-		.CSS {
-			background-color: orange;
-		}
-
-		.HTML {
-			background-color: red;
-		}
-
-		.Javascript {
-			background-color: yellow;
-		}
-	}
-}
-
-.feed {
-	background-color: none;
-	position: relative;
-	height: 500px;
-	overflow: hidden;
-
-	.loader {
-		width: 50%;
-		border: 0 !important;
-		margin: auto;
-		display: block;
-		position: absolute;
-		z-index: 40;
-		right: 0;
-		left: 0;
-		top: 0;
-		bottom: 0;
-	}
-
-	.activity {
-		margin: 0;
-		transition: all 0.2s ease-out;
-		position: relative;
-		overflow: hidden;
-		text-decoration: none;
-		opacity: 0;
-		transition: all 0.3s ease-out;
-
-		&:hover {
-			cursor: pointer;
-			text-decoration: none !important;
-
-			.body {
-				background-color: mix(@theme-color, #f9f9f9, 10%);
-			}
-
-			.intro {
-				background-color: @theme-color;
-				border: 1px solid #00807b;
-
-				& * {
-					text-decoration: none !important;
-					color: white !important;
-				}
-			}
-		}
-
-		.intro {
-			display: flex;
-			justify-content: normal;
-			padding: 10px 30px;
-			background: #f3f3f3;
-			border: 1px solid #eaeaea;
-			transition: all 0.4s ease-in-out;
-
-			h3 {
-				color: @theme-color;
-				font-weight: 700;
-				display: inline;
-				font-size: 3.5em;
-				margin: auto 20px auto 0;
-			}
-
-			.summary {
-				padding: 10px 0;
-
-				h4 {
-					font-size: 23px;
-					font-weight: 600;
-					display: block;
-					margin: auto 0;
-					height: fit-content;
-					line-height: 1;
-					@media(max-width: 600px) {
-						font-size: 17px;
-					}
-				}
-
-				span {
-					display: block;
-					color: @text-color;
-					font-size: 14px;
-					font-style: italic;
-					margin: auto 20px auto 0;
-					height: fit-content;
-					line-height: 1;
-					margin-bottom: 3px;
-					@media(max-width: 600px) {
-						font-size: 12px;
-					}
-				}
-			}
-			@media(max-width: 600px) {
-				padding: 10px 20px;
-			}
-		}
-
-		.body {
-			padding: 20px 30px;
-			background: #f9f9f9;
-			height: 300px;
-			transition: all 0.4s ease-in-out;
-			transform-origin: top;
-			overflow: hidden;
-			@media(max-width: 600px) {
-				padding: 20px;
-			}
-
-			.author {
-				display: block;
-				color: @text-color;
-				font-size: 15px;
-				width: fit-content;
-				width: 100%;
-				margin: 0 0 20px;
-
-				.name {
-					font-weight: 600;
-				}
-
-				.commits {
-					font-size: 12px;
-				}
-
-				img {
-					height: 20px;
-					width: 20px;
-					border-radius: 2px;
-					display: inline-block;
-					margin-right: 10px;
-				}
-				@media(max-width: 600px) {
-					font-size: 14px;
-				}
-			}
-
-			ul {
-				list-style: none;
-				font-style: italic;
-				max-height: 177px;
-				display: flex;
-				flex-direction: column;
-				flex-wrap: wrap;
-				margin: 0 auto;
-				width: auto;
-				overflow: hidden;
-				@media(max-width: 600px) {
-					max-height: none;
-				}
-			}
-
-			p {
-				color: @text-color;
-				font-size: 14px;
-				margin: 10px 0 0;
-			}
-
-			li {
-				font-size: 12px;
-				color: #909090;
-				width: fit-content;
-				width: 50%;
-
-				.date {
-					margin-right: 10px;
-					color: @text-color-heading;
-					font-weight: 600;
-					font-size: 16px;
-				}
-				@media(max-width: 800px) {
-					width: 100%;
-				}
-			}
-		}
-
-		.time {
-			position: absolute;
-			right: 20px;
-			margin: auto;
-			top: 0;
-			bottom: 0;
-			height: 21px;
-			color: #999;
-		}
-	}
-
-	.disappear {
-		height: 0 !important;
-		transform: scaleY(0);
-		transform-origin: top;
-		padding: 0 30px !important;
-	}
 }
