--- a/default.hbs
+++ b/default.hbs
@@ -12,7 +12,7 @@
 	{{! Styles'n'Scripts }}
 	<link rel="stylesheet" href="https://use.typekit.net/okj4emy.css">
 	<link rel="stylesheet" type="text/css" href="{{asset "css/fontawesome-all.min.css"}}">
-	<link rel="stylesheet" href="{{asset "css/bootstrap.min.css"}}">
+	<!--<link rel="stylesheet" href="{{asset "css/bootstrap.min.css"}}">-->
 	<link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}">
 	<link rel="stylesheet" type="text/css" href="{{asset "css/hl-styles/code.css"}}">
 	{{#is "post"}}
