--- a/partials/postheader.hbs
+++ b/partials/postheader.hbs
@@ -3,11 +3,9 @@
 	<!-- start logo -->
 	<a class="mobile-branding" href="{{@blog.url}}"><img src="https://hackers.nyc3.digitaloceanspaces.com/logowhite.png"></a>
 	<!-- start navigation -->
-	<nav class="main-navigation">
-		<div id="main-menu">
+	<nav class="post-navigation">
 			{{! insert navigation partial}}
 			{{navigation}}
-		</div>
 	</nav>
 </header>
 <!-- end header -->
