--- a/assets/css/less_parts/footer.less
+++ b/assets/css/less_parts/footer.less
@@ -3,18 +3,32 @@
 ====================================================*/
 .main-footer {
 	background: linear-gradient(to bottom, rgba(0,255,196,0.2), rgba(41,58,63,0));
-	padding: 35px 0;
+	padding: 35px 20px;
 	color: white;
 	margin-top: 30px;
 	background-color: #3c465a;
 	box-shadow: inset 0 1px 6px 0 rgba(44,50,63,0.41);
+	display: flex;
+	justify-content: space-around;
 	@media(max-width: 600px) {
 		margin-top: 10px;
+		display: block;
 	}
 
 	.widget {
+		padding: 10px 0;
+		width:25%;
+		margin:0;
+
+		@media(max-width: 800px){
+			padding: 0;
+	    width: auto;
+	    margin: 10px 40px 60px 40px;
+		}
+
 		.title {
 			color: @white;
+			font-size: 28px;
 		}
 
 		& > div > div:last-child {
