--- a/assets/css/less_parts/menu.less
+++ b/assets/css/less_parts/menu.less
@@ -3,155 +3,202 @@
 ====================================================*/
 .main-header {
 	text-align: center;
-	padding: 100px 0;
 	background: url("https://hackers.nyc3.digitaloceanspaces.com/head.jpg") center center;
 	background-size: cover;
 	position: relative;
-	margin-bottom: 30px;
-	
+	margin-bottom: 35px;
+
+
+}
+
+.videoHeader {
+	width:100%;
+	height:330px;
+	background-size: cover;
+	position: relative;
+	overflow: hidden;
+	border-bottom: 2px solid #27a2c7;
+
 	@media(max-width: 800px) {
-		padding: 50px 0;
+		 height: 200px;
 	}
 
-	.mobile-branding {
-		display: none;
+	.videoObject {
+		height: 100%;
+    width: 100%;
+    object-fit: cover;
+    z-index: -100;
+    right: 0;
+    bottom: 0;
+    background-size: cover;
+    overflow: hidden;
+
+		@media(max-width: 800px){
+			display: none !important;
+		}
 	}
 
-	.branding {
-		font-size: 3.5em;
-		font-family: 'mr-eaves-xl-modern', serif;
-		color: @text-color-heading;
-		z-index: 5;
-		position: relative;
 
-		&:hover {
-			text-decoration: none;
+	.headerContainer {
+		position: absolute;
+		bottom: 0;
+	  left: 0;
+	  right: 0;
+		top:0;
+		width:100%;
+		height:100%;
+
+		.mobile-branding {
+			display: none;
 		}
 
-		img {
+		.branding {
+			position: absolute;
+			top: 0;
+			bottom: 0;
+			left: 0;
+			right: 0;
+			display: block;
 			width: 300px;
-			max-width: 80%;
+			z-index: 5;
+			margin:auto;
+			height: 64px;
+
 			@media(max-width: 800px) {
-				width: 250px;
+				  height: 44px;
+					width: 200px;
+					bottom: auto;
+					top: 30%;
+			}
+
+			&:hover {
+				text-decoration: none;
+			}
+
+			img {
+				width: 100%;
 			}
 		}
 	}
-}
 
-.navbar-header {
-	text-align: center;
-	font-size: 20px;
-	padding: 14px;
-
-	li {
-		height: 56px;
-		line-height: 56px;
-		font-size: 2em;
-		cursor: pointer;
-	}
-
-	.nav-toggle-button:hover {
-		cursor: pointer;
-	}
-}
-
-.main-navigation {
-	text-align: center;
-	/* margin-top: 35px; */
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
-	background: linear-gradient(0deg, rgba(2,0,36,0) 0%, rgb(8, 115, 195) 100%);
-	height: 150px;
-	@media(max-width: 800px) {
-		height: auto;
-		background: none;
-	}
-
-	.menu {
-		padding: 0;
-		margin: 30px 40px 0 auto;
-		display: flex;
-		justify-content: space-between;
-		max-width: 309px;
-		@media(max-width: 800px) {
-			margin: 30px auto 0;
-			max-width: 235px;
-			opacity: 0.9;
-		}
+	.navbar-header {
+		text-align: center;
+		font-size: 20px;
+		padding: 14px;
 
 		li {
-			list-style: none;
-			display: inline-block;
-			// margin: 0 14px;
-			position: relative;
+			height: 56px;
+			line-height: 56px;
+			font-size: 2em;
+			cursor: pointer;
+		}
 
-			a {
-				color: white;
-				// text-transform: capitalize;
-				line-height: 1;
-				display: block;
-				padding: 0;
-				font-family: 'mr-eaves-xl-modern', serif;
-				text-transform: uppercase;
-				font-size: 20px;
-				font-weight: 600;
-				transition: all 0.2s ease-out;
-				@media(max-width: 600px) {
-					padding: 0;
-					font-weight: 500;
-				}
+		.nav-toggle-button:hover {
+			cursor: pointer;
+		}
+	}
+
+	.main-navigation {
+		text-align: center;
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		background: linear-gradient(0deg, rgba(2,0,36,0) 0%, rgb(8, 115, 195) 100%);
+		height: 150px;
+		@media(max-width: 800px) {
+			height: auto;
+			background: none;
+		}
+
+		.menu {
+			padding: 0;
+			margin: 30px 40px 0 auto;
+			display: flex;
+			justify-content: space-between;
+			width: 300px;
+
+			@media(max-width: 800px) {
+				width: 219px;
+		    position: absolute;
+		    margin: auto;
+		    left: 0;
+		    right: 0;
+		    margin-top: 142px;
 			}
 
-			&:hover > a {
-				text-shadow: 0 0 20px #b41eda;
-				text-decoration: none;
-				cursor: pointer;
-				color: white;
-			}
-
-			&.nav-current {
-				@media(max-width: 600px) {
-					padding: 0;
-				}
+			li {
+				list-style: none;
+				display: inline-block;
+				// margin: 0 14px;
+				position: relative;
 
 				a {
-					color: #40cebb;
-					font-size: 17px;
-				}
-			}
-
-			ul {
-				visibility: hidden;
-				background: @white;
-				text-align: left;
-				margin-bottom: 20px;
-				position: absolute;
-				left: 0;
-				top: 120%;
-				width: 200px;
-				z-index: 999;
-				.opacity(0);
-				.transition(all 0.2s ease);
-
-				li {
-					a {
-						line-height: 2.5em;
-						color: @text-color;
+					color: white;
+					// text-transform: capitalize;
+					line-height: 1;
+					display: block;
+					padding: 0;
+					font-family: 'mr-eaves-xl-modern', serif;
+					text-transform: uppercase;
+					font-size: 16px;
+					font-weight: 600;
+					transition: all 0.2s ease-out;
+					@media(max-width: 600px) {
+						padding: 0;
+						font-weight: 500;
 					}
 				}
 
 				&:hover > a {
+					text-shadow: 0 0 20px #b41eda;
+					text-decoration: none;
 					cursor: pointer;
+					color: @hover-color;
 				}
-			}
 
-			&:hover {
+				&.nav-current {
+					@media(max-width: 600px) {
+						padding: 0;
+					}
+
+					a {
+						color: #40cebb;
+						font-size: 17px;
+					}
+				}
+
 				ul {
-					visibility: visible;
-					.opacity(1);
-					top: 100%;
+					visibility: hidden;
+					background: @white;
+					text-align: left;
+					margin-bottom: 20px;
+					position: absolute;
+					left: 0;
+					top: 120%;
+					width: 200px;
+					z-index: 999;
+					.opacity(0);
+					.transition(all 0.2s ease);
+
+					li {
+						a {
+							line-height: 2.5em;
+							color: @text-color;
+						}
+					}
+
+					&:hover > a {
+						cursor: pointer;
+					}
+				}
+
+				&:hover {
+					ul {
+						visibility: visible;
+						.opacity(1);
+						top: 100%;
+					}
 				}
 			}
 		}
