--- a/assets/css/less_parts/post.less
+++ b/assets/css/less_parts/post.less
@@ -5,9 +5,9 @@
 	====================================================*/
 	.container {
 		margin: 20px auto 0;
+		padding: 0;
 		@media(max-width: 800px) {
 			margin: 0;
-			padding: 0;
 			width: 100% !important;
 
 			.postlist {
@@ -21,48 +21,72 @@
 		display: none;
 	}
 
-	.post-template .post-meta {
+	.post-meta {
 	  margin: 10px 80px 0;
 	  color: #9ea1ab;
 	  font-size: 14px;
 	}
 
+
+
 	.container {
 		margin: 0 auto;
+		padding:0;
 	}
 
 	.main-content {
 		width: 100%;
-		max-width: 1200px;
+		max-width: 1100px;
+		padding:0 !important;
 
 		table {
 			margin-bottom: 10px;
-			margin: 20px auto;
+			margin: 30px auto;
 			border-radius: 3px;
-			min-width: 70%;
+			width: 100%;
 			font-size: 13px;
+			border: 1px solid #d2d2d2;
+			border-spacing: 0;
 
-			td {
+
+			td,
+			th {
 				padding: 7px 20px;
-				border: 1px solid #d2d2d2;
 				min-width: 200px;
 				text-align: center;
+
+				@media(max-width: 600px) {
+					 min-width: 40px;
+					 padding: 7px 0;
+				}
 			}
 
 			tr:nth-child(odd) td {
-				background:#fafafa;
+				background:#f1f4f7;
+			}
+
+			th {
+				background: #64828c;
+				font-weight: 500;
+				text-transform: capitalize;
+				color: white;
+				font-size: 16px;
 			}
 		}
 	}
 
 	.post-head {
-		margin: 0 80px;
-		padding: 50px 0;
+		padding: 30px 0;
+		margin: 0 100px;
 		border-bottom: 1px solid #eaeaea;
+
+		@media(max-width: 600px) {
+			margin: 0 40px;
+		}
 	}
 
 	.post-meta {
-		margin: 10px 80px 0;
+		margin: 10px 100px 0;
 		color: #9ea1ab;
 		font-size: 14px;
 
@@ -89,7 +113,7 @@
 	}
 
 	.post-content {
-		margin: 20px 80px 0;
+		margin: 20px 100px 0;
 
 		@media(max-width: 600px) {
 			margin: 20px 40px 0;
@@ -97,7 +121,7 @@
 	}
 
 	header {
-		max-width: 1200px;
+		max-width: 1100px;
 		margin: auto;
 		position: absolute;
 		width: 100%;
@@ -105,7 +129,7 @@
 		right: 0;
 		padding: 0;
 		background-image: none;
-		background: linear-gradient(0deg, rgba(2, 0, 36, 0) 0%, rgba(32, 119, 178, 0.5) 100%);
+		background: linear-gradient(0deg, rgba(2, 0, 36, 0) 0%, rgba(13, 60, 93, 0.5) 100%);
 
 		.mobile-branding {
 			height: 50px;
@@ -114,6 +138,12 @@
 			margin: 20px;
 			z-index: 100;
 			opacity: 1;
+
+			@media (max-width: 600px) {
+				height: 40px;
+				width: 40px;
+				margin: 15px;
+			}
 		}
 
 		.branding {
@@ -125,19 +155,8 @@
 				width: 200px !important;
 				max-width: none;
 			}
-
-			.menu {
-				margin: 30px 40px 0 auto;
-				float:right;
-				width:300px;
-
-				@media(max-width: 600px){
-					.menu {
-						width: 222px;
-					}
-				}
-			}
 		}
+
 	}
 
 	.main-navigation {
@@ -155,8 +174,74 @@
 			z-index: 20;
 			width: auto;
 			height: auto;
+		}
+		.menu {
+			margin: 30px 40px 0 auto;
+			float:right;
+			width:300px;
 
+			@media(max-width: 600px){
+				width: 222px;
+				margin: 20px 0;
+				padding:0;
+			}
+		}
+	}
 
+	.about-author {
+		background: @white;
+		padding: 40px;
+		margin: 10px 0;
+
+		.avatar {
+			width: 100px;
+			height: 100px;
+			margin-right: 30px;
+			.border-radius(50%);
+			@media(max-width: 600px) {
+				width: 70px;
+				height: 70px;
+			}
+		}
+
+		.bio {
+			display: block;
+			float: left;
+			line-height: 1.5;
+			margin-top: 10px;
+			font-weight: 100;
+		}
+
+		.author {
+			font-size: 1.3em;
+			margin-bottom: 5px;
+
+			a {
+				&:hover {
+					text-decoration: none;
+				}
+			}
+		}
+
+		.meta-info {
+			font-size: 12px;
+			line-height: 1.5;
+			font-weight: 100;
+			color: @text-color-light;
+			margin-bottom: 7px;
+
+			span {
+				margin-right: 10px;
+				display: block;
+
+				i {
+					margin-right: 7px;
+				}
+				@media(max-width: 600px) {
+					display: block !important;
+					width: 100%;
+				}
+			}
 		}
 	}
 }
@@ -240,7 +325,6 @@
 			/*white-space: nowrap;*/
 			@media(max-width: 600px) {
 				white-space: normal;
-				text-align: center;
 			}
 
 			a {
@@ -261,7 +345,6 @@
 			@media(max-width: 600px) {
 				font-weight: 500;
 				font-size: 1.2em;
-				text-align: center;
 			}
 		}
 
@@ -322,6 +405,12 @@
 		overflow-x: hidden;
 		clear: both;
 
+		h3,
+		h2 {
+			margin-top: 40px;
+			margin-bottom: 10px;
+		}
+
 		ol,
 		ul {
 			margin-left: 15px;
@@ -329,12 +418,12 @@
 			margin-bottom: 20px;
 
 			li {
-				padding: 10px;
+				padding: 5px;
 			}
 		}
 
 		.fluid-width-video-wrapper {
-			margin: 0;
+			margin: 0 auto;
 		}
 
 		iframe {
