--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -1,15 +1,10 @@
 <!-- start main-footer -->
 	<footer class="main-footer">
-		<div class="container">
-			<div class="row">
 				<!-- start first footer widget area -->
-				<div class="col-sm-4">
 					{{> widget-recentpost}}
-				</div>
 				<!-- end first footer widget area -->
 				<!-- start second footer widget area -->
 
-				<div class="col-sm-4">
 					{{#is "post"}}
 						{{#is "page"}}
 							{{> widget-authors}}
@@ -21,25 +16,20 @@
 					{{else}}
 						{{> widget-authors}}
 					{{/is}}
-				</div>
 
 				<!-- end second footer widget area -->
 				<!-- start third footer widget area -->
-				<div class="col-sm-4">
 					{{> widget-tagcloud}}
-				</div>
 				<!-- end third footer widget area -->
-			</div>
-		</div>
 	</footer>
 	<!-- end main-footer -->
-	
+
 	{{ghost_foot}}
 	<!-- scripts -->
   <script src="{{asset "/js/jquery.min.js"}}"></script>
 	<script src="{{asset "/js/jquery.fitvids.js"}}"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+  <!--<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>-->
 	<!--<script src="{{asset "/js/bootstrap.min.js"}}"></script>-->
 	<script src="{{asset "/js/highlight.pack.js"}}"></script>
 	<script src="{{asset "/js/main.js"}}"></script>
