--- a/partials/widget-sendgrid.hbs
+++ b/partials/widget-sendgrid.hbs
@@ -4,7 +4,7 @@
     {{#if @labs.subscribers}}
       <section class="gh-subscribe">
         {{subscribe_form placeholder="Your email address"}}
-        <span class="gh-subscribe-rss">or subscribe <a href="http://cloud.feedly.com/#subscription/feed/{{@blog.url}}/rss/"><i class="fas fa-rss"></i></a></span>
+        {{!--<span class="gh-subscribe-rss">or subscribe <a href="http://cloud.feedly.com/#subscription/feed/{{@blog.url}}/rss/"><i class="fas fa-rss"></i></a></span>--}}
       </section>
     {{/if}}
   </div>
