--- a/assets/css/less_parts/postheader.less
+++ b/assets/css/less_parts/postheader.less
@@ -11,7 +11,7 @@
 
   .post-navigation{
     .menu {
-      width: 350px;
+      width: 300px;
       float: right;
       display: flex;
       justify-content: space-between;
@@ -29,7 +29,11 @@
 
         a {
           color:white;
-          font-size: 20px;
+          font-family: 'mr-eaves-xl-modern', serif;
+          text-transform: uppercase;
+          font-size: 16px;
+          font-weight: 600;
+          transition: all 0.2s ease-out;
 
           &:hover {
             color: @hover-color;
