--- a/partials/prev-next.hbs
+++ b/partials/prev-next.hbs
@@ -1,5 +1,6 @@
 <!-- start prev next wrap -->
 <div class="prev-next-wrap clearfix">
+	<div class="author-specs">
 		{{#next_post}}
 		<a class="btn btn-default" style="float:left;" href="{{url}}"><i class="fa fa-angle-left fa-fw"></i> {{title}}</a>
 		{{/next_post}}
@@ -7,4 +8,5 @@
         {{#prev_post}}
         <a class="btn btn-default" style="float:right;" href="{{url}}">{{title}} <i class="fa fa-angle-right fa-fw"></i></a>
         {{/prev_post}}
+			</div>
 </div>
